--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Hello Cats!</h1>
-    <img src="./images/cat.jpg" alt="Cute fluffy cat">
+    <img src="./images/cat.jpg" alt="Cute fluffy kitten">
 
   </body>
 </html>
