Added background image

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>My Cats Git Demo</title>
-  </head>
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
   <body>
     <h1>Hello Cats!</h1>
-    <img src="./images/cat.jpg" alt="Cute fluffy kitten">
+
+    <div class="cat">
+
+    </div>
 
   </body>
 </html>
